--- a/frontend/src/Pages/Styles.scss
+++ b/frontend/src/Pages/Styles.scss
@@ -14,6 +14,14 @@
             height: 50px;
             background-color: $color12;
 
+            &.nav-wide-1 {
+                min-width: 1350px !important;
+            }
+
+            &.nav-wide-2 {
+                min-width: 1400px !important;
+            }
+
             .logo {
                 @include no-select();
                 box-sizing: border-box;
